# bifrost

./: .ansible-lint  .gitignore  .gitreview  .mailmap  .pre-commit-config.yaml  .stestr.conf  CONTRIBUTING.rst  HACKING.rst  MISSION.rst  README.rst  README.vagrant  README.vagrant.rst  TODO.rst  ansible-collections-requirements.yml  bifrost-cli  bindep.txt  create_vm_nodes.sh  deploy.yaml  enroll.yaml  env-setup.sh  env-vars  install.yaml  lower-constraints.txt  openstack-common.conf  pyproject.toml  requirements.txt  setup.cfg  test-bifrost.yaml  test-requirements.txt  tox.ini  troubleshooting.rst
bifrost/: __init__.py  cli.py  inventory.py  version.py
bifrost/tests/: base.py  test_bifrost.py  utils.py
bifrost/tests/functional/: test_inventory_functional.py
bifrost/tests/unit/: test_cli.py  test_inventory.py  test_network_metadata.py
deploy/: README.rst  configdrive.yaml  deploy.yaml  setup_nodes.yaml
deploy/templates/: interfaces.j2  openstack_meta_data.json.j2
doc/: requirements.txt
doc/source/: Vagrant.rst  conf.py  howto.rst  index.rst  offline-install.rst  troubleshooting.rst  vagrant.rst
doc/source/contributor/: contributing.rst  index.rst  testenv.rst  vagrant.rst
doc/source/deploy/: dhcp.rst  keystone.rst
doc/source/dev/: CONTRIBUTING.rst
doc/source/install/: index.rst  keystone.rst  offline-install.rst  oneview.rst  playbooks.rst  virtualenv.rst
doc/source/user/: architecture.rst  dhcp.rst  howto.rst  index.rst  keystone.rst  troubleshooting.rst  (+2 more)
enroll/: README.rst  README.txt  baremetal.csv.example  enroll.yaml  ipmi_bridging_dual_enroll.yaml  ipmi_bridging_single_enroll.yaml  standard_enroll.yaml  virtual_enroll.yaml
inventory/: baremetal.csv.example
inventory/group_vars/: all  all.yaml
playbooks/: cleanup-deployment-images.yaml  deploy-dynamic.yaml  deploy.yaml  enroll-dynamic.yaml  enroll.yaml  example-deploy-all-available-nodes.yaml  install.yaml  redeploy-dynamic.yaml  test-bifrost-create-vm.yaml  test-bifrost-dhcp.yaml  test-bifrost-dynamic.yaml  test-bifrost.yaml
playbooks/ci/: benchmark-ironic.yaml  post.yaml  pre.yaml  run.yaml  upgrade.yaml
playbooks/inventory/: baremetal.csv.example  baremetal.json.example  baremetal.yml.example  bifrost_inventory.py  target
releasenotes/notes/: Add-env-var-support-for-mysql-user-password-3ac520eea7ea9807.yaml  add-bindep-support-8f54b246a1d2bca5.yaml  add-ipe-1f57e04d2881215f.yaml  add-ssh-key-eceb7cde22c3eb4a.yaml  add-support-for-rootfs-uuid-9c332327954f7580.yaml  adds-OCI-registry-83f09e2878b436f4.yaml  agent-power-0773acb338ae4169.yaml  allinone-5fc5355f46192351.yaml  allow-create-vm-with-custom-names-0d655bc02e141ec9.yaml  allow-custom-elements-05c9495c8fd840e8.yaml  allow-custom-private-endpoints-ip-b4f29647569a15ce.yaml  allow-custom-public-endpoints-ip-4662c246f029589e.yaml  allow-install-remote-101eea1ea4009fe1.yaml  always-create-clouds-file-d0b72808155a9344.yaml  ancient-fedora-jessie-773ba251b28f4a94.yaml  ansible-2.0-support-81fa15cc27c28ba8.yaml  ansible-2.1-4b6b36998287bb11.yaml  ansible-2.10-ee0211e72f9522c9.yaml  ansible-4-1e08eb3acd1768fe.yaml  ansible-5.x-c6b4abf349caf632.yaml  ansible-pip-install-2b66bd82ce9ed4f6.yaml  ansible-virt-0759a857daaacccf.yaml  ansible10-c1423fcbaa2df981.yaml  ansible7-e98dfab2ead48d15.yaml  ansible9-26b181a8ca5716cf.yaml  api-url-a6f79de3cc8b0e3d.yaml  auth-59e73f74a2dd507f.yaml  bifrost-cli-enroll-dd5a22f17c6666d5.yaml  bifrost-cli-extra-19fd989a05b2e4b4.yaml  bifrost-cli-uefi-0d7890fb53655845.yaml  bifrost-inspector-a154561802d8d614.yaml  bifrost-install-env-c424fe35422ca815.yaml  bifrost-nginx-install-8a824b4be58201c7.yaml  bifrost-openstack-ci-prep-172cbb159e0a2b78.yaml  bifrost-role-auth-support-ea6b5571cd339aa2.yaml  bifrost_node_names-f26ca2eab7e261d6.yaml  bionic-centos8-ci-5047b40c6ba51484.yaml  bookworm-5dbbb8fe079c7478.yaml  bullseye-9112536e10e18417.yaml  bulseye-deprecated-e7a277abed63930a.yaml  (+286 more)
releasenotes/source/: conf.py  index.rst  mitaka.rst  newton.rst  ocata.rst  pike.rst  queens.rst  rocky.rst  stein.rst  train.rst  ussuri.rst  victoria.rst  wallaby.rst  xena.rst
roles/bifrost-configdrives/: README.md
roles/bifrost-create-vm-nodes/: README.md
roles/bifrost-prepare-for-test/: README.md
roles/bifrost-setup-nodes/: README.md
roles/bifrost-test-vm/: README.md
roles/bifrost-unprovision-nodes/: README.md
roles/bifrost-validate-host-for-deploy/: README.md
roles/ironic-delete/: README.md
roles/ironic-deploy/: README.md
roles/ironic-enroll/: README.md
roles/ironic-install/: README.md
scripts/: README.md  ansible-pip-str.py  collect-test-info.sh  env-setup.sh  install-ansible-pip.sh  install-ansible-source.sh  install-deps.sh  split_json.py  test-bifrost-build-images.sh  test-bifrost-inventory-dhcp.sh  test-bifrost-venv.sh  test-bifrost.sh
setup/: create_bootable_image.yaml  env-setup.sh  env-vars  install.yaml
setup/files/: xinetd.tftp
setup/templates/: agent_config.template.j2  device.map.j2  dnsmasq.conf.j2  ironic.conf.j2  nginx.conf.j2
step1/: env-setup.sh  install.yaml  install.yml
step1/templates/: dnsmasq.conf.j2  init_template.j2  ironic.conf.j2  nginx.conf.j2
tools/: README.md  ansible-lint.sh  bandit.yml  create_vm_nodes.sh
tools/vagrant_dev_env/: Vagrantfile  vagrant.yml
tools/virsh_dev_env/: README.md
zuul.d/: bifrost-jobs.yaml  legacy-bifrost-jobs.yaml  project.yaml
(+410 files in other folders)
