[metadata]
name = bifrost
summary = Deployment of physical machines using OpenStack Ironic and Ansible
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/bifrost/latest/
python_requires = >=3.8
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[files]
packages =
    bifrost

[entry_points]
console_scripts =
    bifrost_inventory.py = bifrost.inventory:main
    bifrost_inventory = bifrost.inventory:main

[codespell]
quiet-level = 4
# Words to ignore:
# - te: This is a file extension.
# - Buil: Surname (has to be lowercase in list)
ignore-words-list = te,buil